examples/test/testpolicy14801.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14801
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key3: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value8
          key47: value25
          key9: value45
      podSelector:
        matchLabels:
          key38: value37
